// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MutedUsers - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="inline-flex flex-col items-start justify-start gap-12 rounded-md bg-[#1D1D20] p-8 md:p-12 custom-muted"
>
  <div
    class="flex w-full flex-col items-start justify-start gap-3"
  >
    <div
      class="inline-flex items-center justify-start gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-volume-x"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
        />
        <line
          x1="22"
          x2="16"
          y1="9"
          y2="15"
        />
        <line
          x1="16"
          x2="22"
          y1="9"
          y2="15"
        />
      </svg>
      <h2
        class="text-2xl leading-8 font-bold text-foreground"
      >
        Muted users
      </h2>
    </div>
    <p
      class="text-base leading-6 font-medium text-secondary-foreground"
    >
      Here is an overview of all users you muted. You can choose to unmute users if you want.
    </p>
    <div
      class="inline-flex w-full flex-col gap-3"
      data-testid="container"
    >
      <h2
        class="mt-5 flex self-center text-center text-2xl leading-8 font-normal opacity-20"
      >
        No muted users yet
      </h2>
    </div>
  </div>
</div>
`;

exports[`MutedUsers - Snapshots > matches snapshot with no muted users 1`] = `
<div
  class="inline-flex flex-col items-start justify-start gap-12 rounded-md bg-[#1D1D20] p-8 md:p-12"
>
  <div
    class="flex w-full flex-col items-start justify-start gap-3"
  >
    <div
      class="inline-flex items-center justify-start gap-2"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-volume-x"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
        />
        <line
          x1="22"
          x2="16"
          y1="9"
          y2="15"
        />
        <line
          x1="16"
          x2="22"
          y1="9"
          y2="15"
        />
      </svg>
      <h2
        class="text-2xl leading-8 font-bold text-foreground"
      >
        Muted users
      </h2>
    </div>
    <p
      class="text-base leading-6 font-medium text-secondary-foreground"
    >
      Here is an overview of all users you muted. You can choose to unmute users if you want.
    </p>
    <div
      class="inline-flex w-full flex-col gap-3"
      data-testid="container"
    >
      <h2
        class="mt-5 flex self-center text-center text-2xl leading-8 font-normal opacity-20"
      >
        No muted users yet
      </h2>
    </div>
  </div>
</div>
`;
